RESOLVED FIXED153351
Buildfix for older GCCs after r195142
https://bugs.webkit.org/show_bug.cgi?id=153351
Summary Buildfix for older GCCs after r195142
Csaba Osztrogonác
Reported 2016-01-22 02:19:31 PST
http://trac.webkit.org/changeset/195142 broke the build with older GCCs (4.8).
Attachments
Patch for landing (1.16 KB, patch)
2016-01-22 02:21 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-01-22 02:21:03 PST
Created attachment 269562 [details] Patch for landing
Csaba Osztrogonác
Comment 2 2016-01-22 02:32:07 PST
build log: ../../Source/WTF/wtf/SystemTracing.h:29:44: error: missing binary operator before token "(" #if defined(__has_include) && __has_include(<System/sys/kdebug.h>) ^
WebKit Commit Bot
Comment 3 2016-01-22 03:01:39 PST
Comment on attachment 269562 [details] Patch for landing Clearing flags on attachment: 269562 Committed r195448: <http://trac.webkit.org/changeset/195448>
WebKit Commit Bot
Comment 4 2016-01-22 03:01:43 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 5 2016-01-22 07:52:08 PST
Thanks for fixing.
Note You need to log in before you can comment on or make changes to this bug.