Buildfix for older GCCs after r195142 https://bugs.webkit.org/show_bug.cgi?id=153351

Unreviewed buildfix.


* wtf/SystemTracing.h:


Canonical link: https://commits.webkit.org/171414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195448 268f45cc-cd09-0410-ab3c-d52691b4dbfc